# yatiri

./: .env.example  .gitignore  INSTALL.md  LICENSE  MANUAL.md  NOTICE.md  README.md  ROADMAP.md  pyproject.toml
docs/: academic_mcp_inventory.md  architecture.md  freeplane_mcp.md
src/research_operator/: main.py
src/research_operator/cli/: __init__.py  app.py  ask.py  init.py  repl.py  run.py  scan.py  setup.py  status.py
src/research_operator/core/: __init__.py  academic_stack.py  advisor.py  ask.py  bibtex_search.py  config.py  crossref.py  export_md.py  hal.py  jstage.py  llm.py  mcp_detect.py  memory.py  models.py  openalex.py  profiles.py  project.py  pubmed.py  registry.py  runner.py  scanner.py  scielo.py  semantic_scholar.py  session.py  vault_export.py  web_search.py
src/research_operator/profiles/: historical_discourse.yaml  mixed_methods.yaml  quant_social_r.yaml
templates/: project_config.yaml
